--- a/FE/geo-guesser-group-project/src/index.css
+++ b/FE/geo-guesser-group-project/src/index.css
@@ -62,3 +62,27 @@ li {
   background-color: #07b687;
   cursor: pointer;
 }
+
+/* Start Page */
+.start-page-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.start-button {
+  color: white;
+  background-color: red;
+  font-size: 30px;
+  border: none;
+  padding: 0.4vh 1vw;
+  border-radius: 15px;
+  width: 20vw;
+  height: 5vw;
+};
+
+.start-button:hover {
+  background-color: rgb(184, 7, 7);
+  cursor: pointer;
+}
