--- a/FE/geo-guesser-group-project/src/index.css
+++ b/FE/geo-guesser-group-project/src/index.css
@@ -67,8 +67,9 @@ li {
 .start-page-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
+  margin: 40px;
 }
 
 .start-button {
@@ -85,4 +86,25 @@ li {
 .start-button:hover {
   background-color: rgb(184, 7, 7);
   cursor: pointer;
+}
+
+/* Main Page */
+.main-page-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.main-page-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  margin-left: 12vw;
+}
+
+.question-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
