--- a/FE/geo-guesser-group-project/src/index.css
+++ b/FE/geo-guesser-group-project/src/index.css
@@ -64,7 +64,7 @@ li {
 }
 
 /* Start Page */
-.start-page-container{
+.start-page-container {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
@@ -81,7 +81,7 @@ li {
   border-radius: 15px;
   width: 20vw;
   height: 5vw;
-};
+}
 
 .start-button:hover {
   background-color: rgb(184, 7, 7);
@@ -89,12 +89,14 @@ li {
 }
 
 /* Main Page */
-.main-page-container{
+.main-page-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.main-page-header{
+.main-page-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -102,9 +104,47 @@ li {
   margin-left: 12vw;
 }
 
-.question-container{
+.image-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.location-answer {
+  font-size: 20px;
+  transition-duration: 0.1s;
+  margin: 0.5vh 0;
+  color: blue;
+}
+
+.location-answer:hover {
+  transform: scale(1.5);
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
+
+.bottom-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: right;
+  align-items: center; */
+  /* margin-bottom: 5vh; */
+  /* margin-right: 10vw; */
+}
+
+.next-question-button {
+  color: white;
+  background-color: #119b76;
+  font-size: 18px;
+  border: none;
+  padding: 0.4vh 1vw;
+  border-radius: 15px;
+  width: 12vw;
+  height: 3vw;
+}
+
+.next-question-button:hover {
+  background-color: #07b687;
+  cursor: pointer;
 }
