--- a/FE/geo-guesser-group-project/src/index.css
+++ b/FE/geo-guesser-group-project/src/index.css
@@ -70,7 +70,6 @@ li {
   /* align-items: center; */
   justify-content: center;
   margin: 40px;
-  width: 40vw;
 }
 
 .start-button {
@@ -105,12 +104,6 @@ li {
   margin-left: 12vw;
 }
 
-.timer, .score{
-  font-size: 70px;
-  color: rgb(251, 85, 85);
-  margin-right: 8vw;
-}
-
 .image-container {
   display: flex;
   flex-direction: column;
@@ -122,7 +115,7 @@ li {
   font-size: 20px;
   transition-duration: 0.1s;
   margin: 0.5vh 0;
-  color: rgb(92, 92, 92);
+  color: blue;
 }
 
 .location-answer:hover {
